--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,1 +1,7 @@
 // Non-modular or client styles for the .l-content region.
+.fullWidth {
+   width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: initial;
+}
