--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -881,7 +881,7 @@ $include-html-global-classes: $include-html-classes;
 
 // We use these to control the caption styles
 // $orbit-container-bg: none;
-   $orbit-caption-bg: rgba(239,123,13, 0.8);
+   $orbit-caption-bg: rgb(239,123,13);
 // $orbit-caption-font-color: $white;
 // $orbit-caption-font-size: rem-calc(14);
 // $orbit-caption-position: "bottom"; // Supported values: "bottom", "under"
