--- a/scss/modules/topbar.scss
+++ b/scss/modules/topbar.scss
@@ -8,7 +8,7 @@
     content: '';
     display: block;
     background: linear-gradient(to right, $mustard 0%,$mustard 24.9%,$sky 25%,$sky 49.9%,$leaf 50%,$leaf 74.9%,$tangerine 75%,$tangerine 100%);
-    height: 2px;
+    height: 3px;
     position: absolute;
     top: 68px;
     width: 100%;
@@ -26,7 +26,27 @@
 }
 
 .logo {
-  height: 4rem;
+  height: 2.5rem;
   position: relative;
   top: -4px;
+}
+
+@media #{$medium-up} {
+  .language-switcher-locale-url li {
+    display: block;
+    float: none !important;
+  }
+
+  .has-dropdown {
+    .menu-attach-block-wrapper {
+      position: absolute;
+      right: 0;
+    }
+  }
+}
+
+@media #{$large-up} {
+  .logo {
+    height: 4rem;
+  }
 }
