--- a/scss/modules/form.scss
+++ b/scss/modules/form.scss
@@ -10,7 +10,7 @@
 	background-repeat: no-repeat; background-position: center center;
 }
 div.DialogInsightFormContainer { text-align: left; }
-div.DialogInsightInputContainer { display: inline-block; vertical-align: top; min-height: 32px; width: 300px; }
+div.DialogInsightInputContainer { display: inline-block; vertical-align: top; min-height: 32px; width: 100%; }
 div.DialogInsightFormRow { padding-bottom: 10px; }
 div.DialogInsightLabel_LeftOfField {
 	display: inline-block; text-align: left; width: 250px; vertical-align: top;
