--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foundation</title>
-  <link rel="stylesheet" href="app.css" />
-  <script src="bower_components/modernizr/modernizr.js"></script>
+  <link rel="stylesheet" href="../css/oidp.css" />
+  <link rel="stylesheet" href="../css/roboto.css" />
+  <link rel="stylesheet" href="../css/foundation-icons.css" />
+  <script src="../bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
   <div class="sticky">
