--- a/templates/speaker.html
+++ b/templates/speaker.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation</title>
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="../css/oidp.css" />
+    <link rel="stylesheet" href="../css/roboto.css" />
+    <link rel="stylesheet" href="../css/foundation-icons.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
