--- a/scss/oidp.scss
+++ b/scss/oidp.scss
@@ -107,6 +107,7 @@
 @import "layout/main";
 @import "layout/aside";
 @import "layout/footer";
+@import "layout/home";
 @import "layout/speakers";
 @import "layout/gallery";
 
