--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -328,9 +328,9 @@
       </div>
     </footer>
 
-    <script src="bower_components/jquery/dist/jquery-1.8.0.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/foundation/js/foundation.min.js"></script>
+    <script src="../js/oidp.js"></script>
     <script>
       if($(".tab-title a")) {
         $(".tab-title a").on("click", function (event) {
