--- a/templates/homev2.html
+++ b/templates/homev2.html
@@ -40,46 +40,112 @@
   </div>
 
   <div class="home-card">
-    <div class="small-11 small-centered columns">
-      <ul class="tabs vertical-tabs" data-tab role="tablist">
-        <li class="tab-title active" role="presentation"><a href="#panel2-1" role="tab" tabindex="0" aria-selected="true" aria-controls="panel2-1">16 Juin</a></li>
-        <li class="tab-title" role="presentation"><a href="#panel2-2" role="tab" tabindex="0" aria-selected="false" aria-controls="panel2-2">17 Juin</a></li>
-        <li class="tab-title" role="presentation"><a href="#panel2-3" role="tab" tabindex="0" aria-selected="false" aria-controls="panel2-3">18 Juin</a></li>
-        <li class="tab-title" role="presentation"><a href="#panel2-4" role="tab" tabindex="0" aria-selected="false" aria-controls="panel2-4">19 Juin</a></li>
-      </ul>
-      <div class="tabs-content">
-        <section role="tabpanel" aria-hidden="false" class="content active" id="panel2-1">
-          <h2>Aujourd'hui à la conférence</h2>
-          <div class="tabs-content-slider">
-            <h3 class="text-center">Les conférenciers</h3>
-            <div class="tabs-content-slide-rail">
-              <div>a</div>
-              <div>b</div>
-              <div>c</div>
-              <div>d</div>
-              <div>e</div>
-              <div>f</div>
+    <div class="row">
+      <div class="small-12 small-centered columns">
+        <ul class="tabs vertical-tabs" data-tab role="tablist">
+          <li class="tab-title active" role="presentation"><a href="#panel2-1" role="tab" tabindex="0" aria-selected="true" aria-controls="panel2-1">16 Juin</a></li>
+          <li class="tab-title" role="presentation"><a href="#panel2-2" role="tab" tabindex="0" aria-selected="false" aria-controls="panel2-2">17 Juin</a></li>
+          <li class="tab-title" role="presentation"><a href="#panel2-3" role="tab" tabindex="0" aria-selected="false" aria-controls="panel2-3">18 Juin</a></li>
+          <li class="tab-title" role="presentation"><a href="#panel2-4" role="tab" tabindex="0" aria-selected="false" aria-controls="panel2-4">19 Juin</a></li>
+        </ul>
+        <div class="tabs-content">
+          <section role="tabpanel" aria-hidden="false" class="content active" id="panel2-1">
+            <div class="tabpanel-text">
+              <h2>Aujourd'hui à la conférence</h2>
+              <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+              </ul>
             </div>
-          </div>
-        </section>
-        <section role="tabpanel" aria-hidden="true" class="content" id="panel2-2">
-          <h2>Aujourd'hui à la conférence</h2>
-          <div class="tabs-content-slider">
-            <h3 class="text-center">Les conférenciers</h3>
-          </div>
-        </section>
-        <section role="tabpanel" aria-hidden="true" class="content" id="panel2-3">
-          <h2>Aujourd'hui à la conférence</h2>
-          <div class="tabs-content-slider">
-            <h3 class="text-center">Les conférenciers</h3>
-          </div>
-        </section>
-        <section role="tabpanel" aria-hidden="true" class="content" id="panel2-4">
-          <h2>Aujourd'hui à la conférence</h2>
-          <div class="tabs-content-slider">
-            <h3 class="text-center">Les conférenciers</h3>
-          </div>
-        </section>
+            <div class="tabs-content-slider">
+              <h3 class="text-center">Les conférenciers</h3>
+              <div class="small-10 medium-8 small-centered columns">
+                <div class="tabs-content-slide-rail">
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section role="tabpanel" aria-hidden="true" class="content" id="panel2-2">
+            <h2>Aujourd'hui à la conférence</h2>
+            <div class="tabs-content-slider">
+              <h3 class="text-center">Les conférenciers</h3>
+            </div>
+          </section>
+          <section role="tabpanel" aria-hidden="true" class="content" id="panel2-3">
+            <h2>Aujourd'hui à la conférence</h2>
+            <div class="tabs-content-slider">
+              <h3 class="text-center">Les conférenciers</h3>
+            </div>
+          </section>
+          <section role="tabpanel" aria-hidden="true" class="content" id="panel2-4">
+            <h2>Aujourd'hui à la conférence</h2>
+            <div class="tabs-content-slider">
+              <h3 class="text-center">Les conférenciers</h3>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row text-center">
+      <a href="#" class="button round">Consultez le programme</a>
+    </div>
+  </div>
+
+  </div>
+
+  <div class="small-12 columns">
+    <div class="row">
+      <h1>Lives du jour</h1>
+      <ul class="small-block-grid-2 large-block-grid-4">
+        <li><img src="http://placehold.it/525x295" /></li>
+        <li><img src="http://placehold.it/525x295" /></li>
+        <li><img src="http://placehold.it/525x295" /></li>
+        <li><img src="http://placehold.it/525x295" /></li>
+      </ul>
+    </div>
+    <div class="row">
+      <h1>Highlight</h1>
+      <p>Laissez-nous vous présenter Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tincidunt quam sed congue lacinia. </p>
+      <div class="row">
+        <div class="small-4 small-centered large-uncentered columns">
+          <img src="http://placehold.it/385x500" />
+        </div>
+        <div class="small-12 large-8 columns">
+          <h2>Dominique Ollivier</h2>
+          <h3>Présidente de l'OCPM</h3>
+          <h4>OCPM, Canada</h4>
+          <h4>Langues</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tincidunt quam sed congue lacinia. In neque velit, hendrerit id varius ut, aliquet quis leo. Quisque quis erat sed eros posuere auctor ut et nisi. Cras faucibus, sem ac convallis mollis, odio sem placerat eros, quis eleifend libero nibh nec diam. Sed condimentum fermentum eros, id gravida eros gravida quis. Maecenas maximus nibh id magna porta fermentum. Suspendisse semper nisi sodales vestibulum lobortis. Sed at luctus orci.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tincidunt quam sed congue lacinia. In neque velit, hendrerit id varius ut, aliquet quis leo.</p>
+        </div>
       </div>
     </div>
   </div>
