--- a/scss/layout/home.scss
+++ b/scss/layout/home.scss
@@ -143,7 +143,7 @@
     border: none;
     font-size: 0;
     line-height: 0;
-    margin: -10px;
+    margin-top: -40px;
     outline: none;
     padding: 0;
     position: absolute;
@@ -211,7 +211,7 @@
       }
     }
 
-    //slick
+    //Slick
 
     .tabs-content-slider {
       padding: 0 0 12px 0;
