--- a/scss/oidp.scss
+++ b/scss/oidp.scss
@@ -113,6 +113,7 @@
 
 // Modules
 // @import "modules/block";
+@import "modules/info";
 @import "modules/topbar";
 @import "modules/table";
 @import "modules/form";
