--- a/templates/homev2.html
+++ b/templates/homev2.html
@@ -58,6 +58,12 @@
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
               </ul>
+
+              <ul class="info">
+                <li class="info-3 info-date">Lundi 16 10:00</li>
+                <li class="info-3 info-type">Activité</li>
+                <li class="info-3 info-location">Salle quelconque</li>
+              <ul>
             </div>
             <div class="tabs-content-slider">
               <h3 class="text-center">Les conférenciers</h3>
