--- a/scss/oidp.scss
+++ b/scss/oidp.scss
@@ -110,6 +110,7 @@
 @import "layout/home";
 @import "layout/speakers";
 @import "layout/gallery";
+@import "layout/program";
 
 // Modules
 // @import "modules/block";
