--- a/templates/homev2.html
+++ b/templates/homev2.html
@@ -98,21 +98,147 @@
             </div>
           </section>
           <section role="tabpanel" aria-hidden="true" class="content" id="panel2-2">
-            <h2>Aujourd'hui à la conférence</h2>
+            <div class="tabpanel-text">
+              <h2>Aujourd'hui à la conférence</h2>
+              <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+              </ul>
+
+              <ul class="info">
+                <li class="info-3 info-date">Lundi 16 10:00</li>
+                <li class="info-3 info-type">Activité</li>
+                <li class="info-3 info-location">Salle quelconque</li>
+              <ul>
+            </div>
             <div class="tabs-content-slider">
               <h3 class="text-center">Les conférenciers</h3>
+              <div class="small-10 medium-8 small-centered columns">
+                <div class="tabs-content-slide-rail">
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
           <section role="tabpanel" aria-hidden="true" class="content" id="panel2-3">
-            <h2>Aujourd'hui à la conférence</h2>
+            <div class="tabpanel-text">
+              <h2>Aujourd'hui à la conférence</h2>
+              <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+              </ul>
+
+              <ul class="info">
+                <li class="info-3 info-date">Lundi 16 10:00</li>
+                <li class="info-3 info-type">Activité</li>
+                <li class="info-3 info-location">Salle quelconque</li>
+              <ul>
+            </div>
             <div class="tabs-content-slider">
               <h3 class="text-center">Les conférenciers</h3>
+              <div class="small-10 medium-8 small-centered columns">
+                <div class="tabs-content-slide-rail">
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
           <section role="tabpanel" aria-hidden="true" class="content" id="panel2-4">
-            <h2>Aujourd'hui à la conférence</h2>
+            <div class="tabpanel-text">
+              <h2>Aujourd'hui à la conférence</h2>
+              <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</li>
+              </ul>
+
+              <ul class="info">
+                <li class="info-3 info-date">Lundi 16 10:00</li>
+                <li class="info-3 info-type">Activité</li>
+                <li class="info-3 info-location">Salle quelconque</li>
+              <ul>
+            </div>
             <div class="tabs-content-slider">
               <h3 class="text-center">Les conférenciers</h3>
+              <div class="small-10 medium-8 small-centered columns">
+                <div class="tabs-content-slide-rail">
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                  <div>
+                    <img src="http://placehold.it/200x100" />
+                    <p>Dominique Ollivier</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
         </div>
